syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcdemo.proto";
option java_outer_classname = "NotificationProto";

package notification;

service NotificationService {
  // Sends an invitation email to the specified address.
  // Returns INTERNAL status if the email cannot be sent.
  rpc SendInvitation (SendInvitationRequest) returns (SendInvitationResponse);
}

message SendInvitationRequest {
  string email = 1;
  string subject = 2;
  string content = 3;
}

message SendInvitationResponse {
  // True if the email was sent successfully. On failure an INTERNAL gRPC status is returned instead.
  bool success = 1;
}